<resources>
    <string name="app_name">CASILICA</string>
    <string name="selectvalue">Select any one</string>
    <string name="date">Date</string>
    <string name="company_name">Company Name</string>
    <string name="client_name">Client Name</string>
    <string name="person_name">Person Name</string>
    <string name="mobile">Phone Number</string>
    <string name="address">Address</string>
    <string name="email">Email ID</string>
    <string name="project">Project Name</string>
    <string name="consultant">Consultant Name</string>
    <string name="offer">Offer No</string>
    <string name="area">Area/Application</string>
    <string name="area1">Area/Application</string>
    <string name="input_date">dd/mm/yy</string>
    <string name="input_client_name">Enter Client Name</string>
    <string name="input_person_name">Enter Person Name</string>
    <string name="input_mobile">Enter Phone Number</string>
    <string name="input_address">Enter Your Address</string>
    <string name="input_email">sample@example.com</string>
    <string name="input_project">Enter Project Name</string>
    <string name="input_consultant">Enter Consultant Name</string>
    <string name="input_offer">Offer No</string>
    <string name="input_area">Your Area</string>
    <string name="input_ambient">Ambient Condition(Monsoon)</string>
    <string name="input_dry_bulb">Dry Bulb Temperature*</string>
    <string name="input_wet_blue">Wet Bulb Temperature</string>
    <string name="input_rh">RH%</string>
    <string name="input_gr">Gr/#</string>
    <string name="input_enthalpy">Enthalpy BTU/#</string>
    <string name="input_design">Design Condition </string>
    <string name="input_design2">Required Condition </string>
    <string name="input_grtext">gr</string>
    <string name="input_f1_hidden">F1 (Due to grain difference)</string>
    <string name="input_room1">Dimension Room 1</string>
    <string name="input_room2">Dimension Room 2</string>
    <string name="input_room3">Dimension Room 3</string>
    <string name="input_length">Length(ft)</string>
    <string name="input_width">Width (ft)</string>
    <string name="input_height">Height (ft)</string>
    <string name="input_volume">Volume</string>
    <string name="input_tvolume">Total Room Volume</string>
    <string name="input_no_of_person">No of Person in a room</string>
    <string name="input_f2hidden">F2 (due to area) - hidden</string>
    <string name="input_f3_factors">F3(factors of construction)</string>
    <string name="input_f4_factors">F4(factors for vapor barrier)</string>
    <string name="input_door1">Door Dimension 1</string>
    <string name="input_door2">Door Dimension 2</string>
    <string name="input_door3">Door Dimension 3</string>
    <string name="input_condition_out">Condition Outside the Door </string>
    <string name="input_ac">AC</string>
    <string name="input_non_ac">Non AC</string>
    <string name="input_door_opening">Door Opening per hour </string>
    <string name="input_d1">Door 1 </string>
    <string name="input_d2">Door 2 </string>
    <string name="input_d3">Door 3 </string>
    <string name="input_d4">Door 4 </string>
    <string name="input_occupancy">Occupancy</string>
    <string name="input_activity_level">Activity Level </string>
    <string name="input_f_dimensions">Fixed Opening Dimensions </string>
    <string name="input_fopening1">Fixed opening 1</string>
    <string name="input_fopening2">Fixed opening 2</string>
    <string name="input_fopening3">Fixed opening 3</string>
    <string name="input_depth">Depth(ft)</string>
    <string name="input_fixed_opening">Condition Outside the Fixed Opening</string>
    <string name="input_fresh_air">Fresh Air quantity</string>
    <string name="input_precool">PRECOOL</string>
    <string name="input_cfm">CFM</string>
    <string name="input_no_precool">NO PRECOOL</string>
    <string name="input_exhaust_air">Exhaust Air Quantity </string>
    <string name="input_leakage_air">Infiltration/Leakage Air Quantity </string>
    <string name="input_infilterated">Infilterated Air @ condition</string>
    <string name="input_product_latend">Product Latent Load</string>
    <string name="input_kgse">kgs/hr</string>
    <string name="input_pload">Product load</string>
    <string name="input_imc">IMC</string>
    <string name="input_fmc">FMC</string>
    <string name="input_wt">Wt</string>
    <string name="input_bywt">By wt</string>
    <string name="input_dload">Dir Load</string>
    <string name="input_dtime">Drying time</string>
    <string name="input_heat_load">Heat Load of Each Area </string>
    <string name="input_ahu">AHU Capacity </string>
    <string name="input_adp">Design ADP </string>
    <string name="input_estatic">External Static Pressure Required</string>
    <string name="input_fclass">Filtration/Class Level to be Maintained</string>
    <string name="input_bhu">BTU/Hr</string>
    <string name="input_degf">deg F</string>
    <string name="input_inches">inches of WC</string>
    <string name="input_microns">microns</string>
    <string name="f1_35">1.0</string>
    <string name="f1_40">1.12</string>
    <string name="f1_50">1.35</string>
    <string name="f1_60">1.59</string>
    <string name="f1_70">1.82</string>
    <string name="f1_80">2.06</string>
    <string name="f1_90">2.29</string>
    <string name="f1_100">2.53</string>
    <string name="f1_110">2.76</string>
    <string name="f1_120">3.00</string>
    <string name="f2_10">0.65</string>
    <string name="f2_20">0.58</string>
    <string name="f2_25">0.55</string>
    <string name="f2_30">0.53</string>
    <string name="f2_35">0.52</string>
    <string name="f2_40">0.5</string>
    <string name="f2_45">0.48</string>
    <string name="f2_50">0.46</string>
    <string name="f2_55">0.45</string>
    <string name="f2_60">0.44</string>
    <string name="f2_65">0.435</string>
    <string name="f2_70">0.42</string>
    <string name="f2_75">0.41</string>
    <string name="f2_80">0.4</string>
    <string name="f2_85">0.39</string>
    <string name="f2_90">0.38</string>
    <string name="f2_95">0.375</string>
    <string name="f2_100">0.37</string>
    <string name="delta_0_10">0.0</string>
    <string name="delta_0_15">0.0</string>
    <string name="delta_0_20">0.0</string>
    <string name="delta_0_25">0.0</string>
    <string name="delta_0_30">0.0</string>
    <string name="delta_0s_10">0.0</string>
    <string name="delta_0s_15">0.0</string>
    <string name="delta_0s_20">0.0</string>
    <string name="delta_0s_25">0.0</string>
    <string name="delta_0s_30">0.0</string>
    <string name="delta_1_10">0.25</string>
    <string name="delta_1_15">0.3125</string>
    <string name="delta_1_20">0.375</string>
    <string name="delta_1_25">0.375</string>
    <string name="delta_1_30">0.45</string>
    <string name="delta_1s_10">0.3</string>
    <string name="delta_1s_15">0.36</string>
    <string name="delta_1s_20">0.38</string>
    <string name="delta_1s_25">0.39</string>
    <string name="delta_1s_30">0.55</string>
    <string name="delta_2_10">0.35</string>
    <string name="delta_2_15">0.41</string>
    <string name="delta_2_20">0.42</string>
    <string name="delta_2_25">0.44</string>
    <string name="delta_2_30">0.7</string>
    <string name="delta_2s_10">0.4</string>
    <string name="delta_2s_15">0.46</string>
    <string name="delta_2s_20">0.5</string>
    <string name="delta_2s_25">0.52</string>
    <string name="delta_2s_30">0.8</string>
    <string name="delta_3_10">0.5</string>
    <string name="delta_3_15">0.52</string>
    <string name="delta_3_20">0.55</string>
    <string name="delta_3_25">0.59</string>
    <string name="delta_3_30">0.86</string>
    <string name="delta_3s_10">0.55</string>
    <string name="delta_3s_15">0.57</string>
    <string name="delta_3s_20">0.6</string>
    <string name="delta_3s_25">0.63</string>
    <string name="delta_3s_30">0.87</string>
    <string name="delta_4_10">0.65</string>
    <string name="delta_4_15">0.66</string>
    <string name="delta_4_20">0.76</string>
    <string name="delta_4_25">0.79</string>
    <string name="delta_4_30">1.22</string>
    <string name="delta_4s_10">0.75</string>
    <string name="delta_4s_15">0.81</string>
    <string name="delta_4s_20">0.95</string>
    <string name="delta_4s_25">1</string>
    <string name="delta_4s_30">1.42</string>
    <string name="delta_5_10">0.85</string>
    <string name="delta_5_15">0.96</string>
    <string name="delta_5_20">0.98</string>
    <string name="delta_5_25">1.2</string>
    <string name="delta_5_30">1.62</string>
    <string name="delta_5s_10">0.95</string>
    <string name="delta_5s_15">1</string>
    <string name="delta_5s_20">1.2</string>
    <string name="delta_5s_25">1.5</string>
    <string name="delta_5s_30">1.82</string>
    <string name="delta_6_10">1</string>
    <string name="delta_6_15">1.2</string>
    <string name="delta_6_20">1.3</string>
    <string name="delta_6_25">1.8</string>
    <string name="delta_6_30">2</string>
    <string name="delta_6s_10">1.12</string>
    <string name="delta_6s_15">1.14</string>
    <string name="delta_6s_20">1.7</string>
    <string name="delta_6s_25">2</string>
    <string name="delta_6s_30">2.3</string>
    <string name="delta_7_10">1.23</string>
    <string name="delta_7_15">1.26</string>
    <string name="delta_7_20">1.9</string>
    <string name="delta_7_25">2.2</string>
    <string name="delta_7_30">2.6</string>
    <string name="delta_7s_10">0.0</string>
    <string name="delta_7s_15">1.8</string>
    <string name="delta_7s_20">2.1</string>
    <string name="delta_7s_25">2.4</string>
    <string name="delta_7s_30">2.8</string>
    <string name="delta_8_10">0.0</string>
    <string name="delta_8_15">1.9</string>
    <string name="delta_8_20">2.4</string>
    <string name="delta_8_25">2.8</string>
    <string name="delta_8_30">3</string>
    <string name="delta_8s_10">0.0</string>
    <string name="delta_8s_15">1.2</string>
    <string name="delta_8s_20">2.6</string>
    <string name="delta_8s_25">3</string>
    <string name="delta_8s_30">3.49</string>
    <string name="delta_9_10">0.0</string>
    <string name="delta_9_15">2.4</string>
    <string name="delta_9_20">2.9</string>
    <string name="delta_9_25">3.4</string>
    <string name="delta_9_30">3.79</string>
    <string name="delta_9s_10">0.1</string>
    <string name="delta_9s_15">2.7</string>
    <string name="delta_9s_20">3.2</string>
    <string name="delta_9s_25">3.5</string>
    <string name="delta_9s_30">4</string>
    <string name="delta_10_10">0.0</string>
    <string name="delta_10_15">2.9</string>
    <string name="delta_10_20">3.5</string>
    <string name="delta_10_25">3.9</string>
    <string name="delta_10_30">4.4</string>
    <string name="delta_10s_10">0.0</string>
    <string name="delta_10s_15">0.0</string>
    <string name="delta_10s_20">3.8</string>
    <string name="delta_10s_25">4.2</string>
    <string name="delta_10s_30">4.7</string>
    <string name="delta_11_10">0.0</string>
    <string name="delta_11_15">0.0</string>
    <string name="delta_11_20">4</string>
    <string name="delta_11_25">4.6</string>
    <string name="delta_11_30">5</string>
    <string name="delta_11s_10">0.0</string>
    <string name="delta_11s_15">0.0</string>
    <string name="delta_11s_20">4.4</string>
    <string name="delta_11s_25">4.9</string>
    <string name="delta_11s_30">5.4</string>
    <string name="delta_12_10">0.0</string>
    <string name="delta_12_15">0.0</string>
    <string name="delta_12_20">4.6</string>
    <string name="delta_12_25">5</string>
    <string name="delta_12_30">5.8</string>
    <string name="delta_12s_10">0.0</string>
    <string name="delta_12s_15">0.0</string>
    <string name="delta_12s_20">5.1</string>
    <string name="delta_12s_25">5.5</string>
    <string name="delta_12s_30">6.1</string>
    <string name="delta_13_10">0.0</string>
    <string name="input_project_loc">Project Location</string>
</resources>