<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.risein.llcs.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:transitionName="actionBar"
        android:background="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Light"/>

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">





        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/date"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_otp"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:inputType="date"
                    android:layout_marginTop="5dp"
                    android:hint="@string/input_date"
                    android:id="@+id/edt_date" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/company_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:text="llcs"
                    android:inputType="text|textCapWords"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_client_name"
                    android:id="@+id/edt_comname" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/client_name"/>

                <EditText
                    android:id="@+id/edt_cname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_client_name"
                    android:inputType="text|textCapWords"
                    android:padding="8dp"
                    android:text="xyz"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/person_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_otp"
                    android:orientation="horizontal"
                    android:weightSum="1.35">
                    <Spinner
                        android:id="@+id/spnrgender"
                        android:layout_width="0dp"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:layout_height="match_parent" />

                    <View
                        android:layout_width="0dp"
                        android:layout_weight=".005"
                        android:background="@android:color/white"
                        android:layout_height="match_parent"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight=".9"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textPersonName|textCapWords"
                        android:padding="8dp"
                        android:text="abc"
                        android:background="@android:color/transparent"
                        android:hint="@string/input_person_name"
                        android:id="@+id/edt_pname" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/mobile"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:text="123456789"
                    android:inputType="phone"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_mobile"
                    android:id="@+id/edt_pnumber" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/address"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:gravity="left"
                    android:text="Noida"
                    android:inputType="textPostalAddress|textCapSentences"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_address"
                    android:id="@+id/edt_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/email"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:text="abc@gmail.com"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_email"
                    android:id="@+id/edt_email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/project"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:text="projectname"
                    android:inputType="text|textCapWords"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_project"
                    android:id="@+id/edt_project" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/input_project_loc"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:inputType="text|textCapWords"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_project_loc"
                    android:id="@+id/edt_project_loc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/consultant"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:text="con name"
                    android:inputType="text|textCapWords"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_consultant"
                    android:id="@+id/edt_consultant" />

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/offer"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:inputType="text"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_offer"
                    android:id="@+id/edt_offer_no" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorInputText"
                    android:text="@string/area"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:text=""
                    android:inputType="text|textCapWords"
                    android:background="@drawable/edit_text_otp"
                    android:hint="@string/input_area"
                    android:id="@+id/edt_area" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/next"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/btn_press"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:text="NEXT"/>

                    <!-- <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/colorPrimary"
                         android:layout_marginLeft="8dp"
                         android:text=">"
                         android:textSize="18sp"
                         />-->


                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</LinearLayout>
